added initial (and bare) lime2d page. fixed some spacing and sizing throughout site

--- a/index.html
+++ b/index.html
@@ -81,11 +81,20 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
+          <a href="lime2d.html"><h4>Lime2D</h4></a>
+          <p>
+            An open source in-game map/animation editor for 2D C++ SFML game development projects. It is designed as an easy library to set up and use in your game. 
+            Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions, and everything else being rendered. 
+            This will make for extremely efficient 2D level creation.
+          </p>
+        </div>
+        <div class="subsection">
             <a href="http://www.patreon.com/limeoats" target="_blank"><h4>The Treetop</h4></a>
             <p>
-                The time has finally come for me to begin development of my new game, <em>The Treetop</em>.<br/>
+                <!--The time has finally come for me to begin development of my new game, <em>The Treetop</em>.<br/>
                 This will be a 2D Action-Adventure platforming game with some very visually appealing mechanics.<br/>
-                For more information, please check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.
+                For more information, please check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.-->
+                This project is currently on hold during the development of <a href="lime2d.html">Lime2D</a>.
             </p>
         </div>
         <div class="subsection">
