--- a/lime2d.html
+++ b/lime2d.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Limeoats | A Note For Lime</title>
-    <link rel="canonical" href="http://www.limeoats.com/a-note-for-lime.html" />
+    <title>Limeoats | Lime2D</title>
+    <link rel="canonical" href="http://www.limeoats.com/lime2d.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -31,7 +31,7 @@
     <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
+    <meta name="description" content="An open source in-game map/animation editor for 2D C++ SFML game development projects.">
     <meta name="author" content="Limeoats">
 
     <script src="javascripts/main.js" type="text/javascript"></script>
@@ -62,23 +62,26 @@
     </section>
     <section class="main-content">
       <div>
-        <h2>A Note For Lime</h2>
+        <h2>Lime2D</h2>
         <br/>
-        <img src="images/a-note-for-lime-screenshot-1.png" alt="A Note For Lime Image" />
-        <br/><br/>
+        <img src="images/lime2d_0.png" alt="Lime2D Screenshot" />
         <p>
-            Help Oats deliver an important note to Lime!<br /><br />
-            One year ago, Oats asked Lime to be his girlfriend and she said yes.<br /><br />
-            Now, exactly one year later, he has a note that must be delivered to her.<br /><br />
-            Help Oats make his way through 3 challenging, action-packed levels to reach his beautiful girlfriend on their anniversary.
+            <br/>
+            An open source in-game map/animation editor for 2D C++ SFML game development projects. <br/><br/>
+            It is designed as an easy library to set up and use in your game. <br/><br/>Since it is an in-game editor, you can edit maps 
+            in real-time with your player, physics, collisions, and everything else being rendered. This will make for extremely efficient 2D level creation.
+        </p>
+        <hr/>
+        <p>
+            <h3>Features</h3>
+            <ul>
+                <li>Feature list coming soon!</li>
+            </ul>
         </p>
         <hr />
         <p>
-            Download A Note For Lime by clicking the button below for your operating system!
+            For more information about Lime2D, please check out the project's <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.
         </p>
-        <a href="http://bit.ly/1Oakc8k" class="limeButton" style="width: 120px;" target="_blank">Windows Download</a>
-        <a href="http://bit.ly/1liYcBo" class="limeButton" style="width: 120px;" target="_blank">Mac OS X Download</a>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank" class="limeButton" style="width: 120px;">Donate to Limeoats</a>
         <br />
       </div>
       <br />
