--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
       <div>
           <h3>Writing</h3>
           <div class="subsection">
+              <a href="bit.ly/28RRuMV"><h4>CLion and CMake</h4></a>
+              <span class="writingDescription">Learn how to create static libraries and link to them in CLion with CMake.</span>
+          </div>
+          <div class="subsection">
               <a href="http://bit.ly/1XTa6yO"><h4>3D Lagging Camera in Unity</h4></a>
               <span class="writingDescription">A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.</span>
           </div>
