--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div>
           <h3>Writing</h3>
           <div class="subsection">
-              <a href="bit.ly/28RRuMV"><h4>CLion and CMake</h4></a>
+              <a href="http://bit.ly/28RRuMV"><h4>CLion and CMake</h4></a>
               <span class="writingDescription">Learn how to create static libraries and link to them in CLion with CMake.</span>
           </div>
           <div class="subsection">
