--- a/lime2d.html
+++ b/lime2d.html
@@ -64,18 +64,31 @@
       <div>
         <h2>Lime2D</h2>
         <br/>
-        <img src="images/lime2d_0.png" alt="Lime2D Screenshot" />
+        <!--<img src="images/lime2d_0.png" alt="Lime2D Screenshot" />-->
+        <video width="100%" height="280" autoplay="" loop="" poster="">
+          <source src="images/lime2d/video_1.mp4">
+				  <source src="images/lime2d/video_1.ogv">
+				  Your browser does not support this video.
+				</video>
         <p>
             <br/>
-            An open source in-game map/animation editor for 2D C++ SFML game development projects. <br/><br/>
+            An open source in-game map/animation editor for 2D C++ game development projects. <br/><br/>
             It is designed as an easy library to set up and use in your game. <br/><br/>Since it is an in-game editor, you can edit maps 
             in real-time with your player, physics, collisions, and everything else being rendered. This will make for extremely efficient 2D level creation.
         </p>
         <hr/>
         <p>
-            <h3>Features</h3>
+            <h3>Current Features</h3>
             <ul>
-                <li>Feature list coming soon!</li>
+                <li>Efficient custom map format created by me</li>
+                <li>Create brand news maps of any size while already in-game</li>
+                <li>
+                  Easy map configuration
+                  <ul style="margin-top: -14px;"><li>Tileset paths, sprite scale, tile scale, screen size, etc.</li></ul>
+                </li>
+                <li>Using tiles from different tilesets</li>
+                <li>Drawing on multiple layers</li>
+                <li>More coming soon!</li>
             </ul>
         </p>
         <hr />
