--- a/lime2d.html
+++ b/lime2d.html
@@ -72,22 +72,23 @@
 				</video>
         <p>
             <br/>
-            An open source in-game map/animation editor for 2D C++ game development projects. <br/><br/>
-            It is designed as an easy library to set up and use in your game. <br/><br/>Since it is an in-game editor, you can edit maps 
+            Lime2D is an open source in-game map/animation editor for 2D C++ game development projects.<br/><br/>Since it is an in-game editor, you can edit maps 
             in real-time with your player, physics, collisions, and everything else being rendered. This will make for extremely efficient 2D level creation.
         </p>
         <hr/>
         <p>
             <h3>Current Features</h3>
             <ul>
+                <li>Builds on Windows and Mac OS X</li>
                 <li>Efficient custom map format created by me</li>
                 <li>Create brand news maps of any size while already in-game</li>
                 <li>
                   Easy map configuration
                   <ul style="margin-top: -14px;"><li>Tileset paths, sprite scale, tile scale, screen size, etc.</li></ul>
                 </li>
-                <li>Using tiles from different tilesets</li>
-                <li>Drawing on multiple layers</li>
+                <li>Use tiles from different tilesets</li>
+                <li>Draw on multiple layers</li>
+                <li>View tile properties</li>
                 <li>More coming soon!</li>
             </ul>
         </p>
