update discord link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="https://www.patreon.com/limeoats" target="_blank"><img src="images/patreon-icon.png" title="Patreon" id="patreonButton" /></a>
         <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
         <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
-        <a href="https://discord.gg/0g6ksoTuyf4TJKqh" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
+        <a href="https://discord.gg/TwbAEb4" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
       </div>
     </section>
     <section class="main-content">
