--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -54,14 +54,7 @@
     <section class="page-header">
       <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
-      <div class="project-icons">
-        <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
-        <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="Youtube" /></a>
-        <a href="https://www.patreon.com/limeoats" target="_blank"><img src="images/patreon-icon.png" title="Patreon" id="patreonButton" /></a>
-        <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
-        <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
-        <a href="https://discord.gg/TwbAEb4" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
-      </div>
+      <div class="project-icons"></div>
     </section>
     <section class="main-content">
       <div>
