--- a/index.html
+++ b/index.html
@@ -53,14 +53,7 @@
     <section class="page-header">
       <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
-      <div class="project-icons">
-        <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
-        <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="Youtube" /></a>
-        <a href="https://www.patreon.com/limeoats" target="_blank"><img src="images/patreon-icon.png" title="Patreon" id="patreonButton" /></a>
-        <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
-        <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
-        <a href="https://discord.gg/TwbAEb4" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
-      </div>
+      <div class="project-icons"></div>
     </section>
     <section class="main-content">
       <div>
@@ -71,19 +64,11 @@
       </div>
       <hr />
       <div>
-        <h3>Donations</h3>
-        <p>If you're feeling generous and would like to support my development projects, you can donate by
-            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank">clicking here.</a>
-        <br />Every donation that comes my way means a lot to me and any amount is appreciated.
-        </p>
-      </div>
-      <hr />
-      <div>
         <h3>Current projects</h3>
         <div class="subsection">
           <a href="lime2d.html"><h4>Lime2D</h4></a>
           <p>
-            An open source in-game map/animation editor for 2D C++ SFML game development projects. It is designed as an easy library to set up and use in your game. 
+            An open source in-game map/animation editor for 2D C++ SFML game development projects. It is designed to be an easy library to set up and use in your game. 
             Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions, and everything else being rendered. 
             This will make for extremely efficient 2D level creation.
           </p>
@@ -149,11 +134,19 @@
       </div>
       <hr />
       <div>
+        <h3>Donations</h3>
+        <p>If you're feeling generous and would like to support my development projects, you can donate by
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank">clicking here.</a>
+        <br />Every donation that comes my way means a lot to me and any amount is appreciated.
+        </p>
+      </div>
+      <hr />
+      <div>
         <h3>Contact me</h3>
         <p>If you would like to contact me, you can...</p>
         <ul>
           <li>Tweet at me <a href="https://twitter.com/limeoats" target="_blank">@Limeoats</a></li>
-          <li>Join my <a href="https://discord.gg/0g6ksoTuyf4TJKqh" target="_blank">Discord server</a></li>
+          <li>Join my <a href="https://discord.gg/TwbAEb4" target="_blank">Discord server</a></li>
           <li>Send an email to <a href="mailto:oats@limeoats.com">oats@limeoats.com</a></li>
         </ul>
       </div>
