--- a/clion-and-cmake.html
+++ b/clion-and-cmake.html
@@ -6,17 +6,17 @@
     <title>Limeoats | CLion, CMake, and Statically Linked Libraries</title>
     <link rel="canonical" href="http://www.limeoats.com/clion-and-cmake.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="stylesheets/syntaxhighlight.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" href="css/syntaxhighlight.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Learn how to create static libraries and link to them in CLion with CMake.">
     <meta name="author" content="Limeoats">
 
-    <script src="javascripts/highlight.pack.js"></script>
-    <script src="javascripts/main.js" type="text/javascript"></script>
+    <script src="js/highlight.pack.js"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
     <script>
