--- a/lime2d.html
+++ b/lime2d.html
@@ -6,15 +6,15 @@
     <title>Limeoats | Lime2D</title>
     <link rel="canonical" href="http://www.limeoats.com/lime2d.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="An open source in-game map/animation editor for 2D C++ SFML game development projects.">
     <meta name="author" content="Limeoats">
 
-    <script src="javascripts/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     
     <script>
         //Google analytics
