fix some broken tags

--- a/clion-and-cmake.html
+++ b/clion-and-cmake.html
@@ -191,7 +191,7 @@ target_link_libraries(${PROJECT_NAME} ${TINYXML2_LIBRARY})
                 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
             })();
         </script>
-      <div>
+        </div>
       </p>
     </section>
   </body>
