added footer to clion and cmake page

--- a/clion-and-cmake.html
+++ b/clion-and-cmake.html
@@ -190,6 +190,11 @@ target_link_libraries(${PROJECT_NAME} ${TINYXML2_LIBRARY})
             })();
         </script>
       </div>
+      <div>
+        <footer class="site-footer">
+          <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
+        </footer>
+      </div>
     </section>
   </body>
 </html>
