fixed meta descriptions

--- a/lime2d.html
+++ b/lime2d.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="An open source in-game map/animation editor for 2D C++ SFML game development projects.">
+    <meta name="description" content="An open source in-game map/animation editor for 2D C++ game development projects.">
     <meta name="author" content="Limeoats">
 
     <script src="js/main.js" type="text/javascript"></script>
