--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="Hello! My name is Mark and I enjoy programming. I spend a great deal of my time
-     doing all sorts of programming, including game development, web development, virtual reality,
-     and much more.">
+    <meta name="description" content="Hello! My name is Mark and I enjoy programming.">
     <meta name="author" content="Limeoats">
 
     <script src="js/main.js" type="text/javascript"></script>
