update meta tags on all pages

--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -32,7 +32,7 @@
     <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player">
+    <meta name="description" content="A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.">
     <meta name="author" content="Limeoats">
 
     <script src="js/highlight.pack.js"></script>
@@ -51,6 +51,8 @@
     </script>
   </head>
   <body>
+    <meta itemprop="name" content="Limeoats | 3D Lagging Camera in Unity">
+    <meta itemprop="description" content="A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.">
     <section class="page-header">
       <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
