--- a/clion-and-cmake.html
+++ b/clion-and-cmake.html
@@ -51,6 +51,8 @@
     </script>
   </head>
   <body>
+    <meta itemprop="name" content="Limeoats | CLion, CMake, and Statically Linked Libraries">
+    <meta itemprop="description" content="Learn how to create static libraries and link to them in CLion with CMake.">
     <section class="page-header">
       <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
