--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     </script>
   </head>
   <body>
+    <meta itemprop="name" content="Limeoats | Home">
+    <meta itemprop="description" content="Hello! My name is Mark and I enjoy programming.">
     <section class="page-header">
       <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
