--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -48,6 +48,8 @@
     </script>
   </head>
   <body>
+    <meta itemprop="name" content="Limeoats | A Note For Lime">
+    <meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
     <section class="page-header">
       <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
