test limeoats bot commands

--- a/limeoatsbot.html
+++ b/limeoatsbot.html
@@ -50,7 +50,10 @@
 
     <script type="text/javascript">
       $(document).ready(function() {
-        $.getJSON("http://anyorigin.com/get?url=http://www.limeoats.com/includes/botcommands.js&callback=?", function(data) {
+        $.getJSON("http://anyorigin.com/get?url=http://www.limeoats.com/includes/botcommands.js&callback=?", {
+          format: "json"
+        }).done(function(data) {
+          alert("hi");
           $("#divBotCommands").html(data);
         });
       });
