updated bot commands

--- a/limeoatsbot.html
+++ b/limeoatsbot.html
@@ -68,7 +68,14 @@
     <section class="main-content">
       <div>
         <h2>Limeoats Bot</h2>
-        <div id="divBotCommands"></div>
+        <div id="divBotCommands">
+          <table id="tblBotCommands">
+            <th>Id</th>
+            <th>Command</th>
+            <th>Response</th>
+            <th style="width: 200px;">Description</th>
+          </table>
+        </div>
       </div>
       <br />
       <div id="disqus_thread"></div>
