--- a/limeoatsbot.html
+++ b/limeoatsbot.html
@@ -53,7 +53,7 @@
         loadJSON("includes/botcommands.js", function(response) {
           var str = response.replace(/(\')/g, '"');
           str = str.replace(/(\")/g, "\\\\\"");
-          var items = $.parseJSON(response);
+          var items = $.parseJSON(str);
           for (i = 0; i < items.length; ++i) {
             $("#tblBotCommands").append("<tr><td>" + items[i].Id + "</td><td>" + 
               items[i].Command + "</td><td>" + items[i].Response + "</td><td>" + items[i].Description + "</td></tr>");
