--- a/lime2d.html
+++ b/lime2d.html
@@ -35,7 +35,7 @@
     <meta name="author" content="Limeoats">
 
     <script src="js/main.js" type="text/javascript"></script>
-    
+
     <script>
         //Google analytics
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -58,23 +58,27 @@
     <section class="main-content">
       <div>
         <h2>Lime2D</h2>
-        <br/>
         <!--<img src="images/lime2d_0.png" alt="Lime2D Screenshot" />-->
-        <video width="100%" height="280" autoplay="" loop="" poster="">
+        <!-- <video height="300px" autoplay="" loop="" poster="">
           <source src="images/lime2d/video_1.mp4">
 				  <source src="images/lime2d/video_1.ogv">
 				  Your browser does not support this video.
-				</video>
+				</video> -->
         <p>
             <br/>
-            Lime2D is an open source in-game map/animation editor for 2D C++ game development projects.<br/><br/>Since it is an in-game editor, you can edit maps 
-            in real-time with your player, physics, collisions, and everything else being rendered. This will make for extremely efficient 2D level creation.
+            Lime2D is an open source in-game map/animation editor for 2D C++ game development projects.
+            <br/><br/>
+            Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions,
+            and everything else being rendered. This will make for extremely efficient 2D level creation.
+            <br/><br/>
+            The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
         </p>
         <hr/>
         <p>
-            <h3>Current Features</h3>
+            <h3>Map editor</h3>
+            <img src="images/lime2d/map_editor_2.png" class="roundImage" style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="map editor" />
+            <img src="images/lime2d/map_editor_3.png" class="roundImage" style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="map editor" />
             <ul>
-                <li>Builds on Windows and Mac OS X</li>
                 <li>Efficient custom map format created by me</li>
                 <li>Create brand news maps of any size while already in-game</li>
                 <li>
@@ -84,8 +88,29 @@
                 <li>Use tiles from different tilesets</li>
                 <li>Draw on multiple layers</li>
                 <li>View tile properties</li>
+                <li>Undo / Redo</li>
+                <li>Smooth zooming in / out
+                <li>Ambient light editor using real shaders</li>
+                <li>Shape drawing (lines, rectangles)</li>
+                <li>Entity list for viewing and updating properties of all map objects</li>
                 <li>More coming soon!</li>
             </ul>
+        </p>
+        <hr/>
+        <p>
+          <h3>Animation editor</h3>
+          <img src="images/lime2d/animation_editor_3.png" class="roundImage" style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="animation editor" />
+          <img src="images/lime2d/animation_editor_1.png" class="roundImage" style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="animation editor" />
+          <ul>
+            <li>Stored efficiently in Lua files</li>
+            <li>
+              Create / load any animation with already in-game
+              <ul style="margin-top: -14px;"><li>Saving the animation will automatically update it in-game without restarting the game</li></ul>
+            </li>
+            <li>Zoom in / out</li>
+            <li>Change any animation properties from within the editor</li>
+        </ul>
+
         </p>
         <hr />
         <p>
