--- a/lime2d.html
+++ b/lime2d.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png" />
     <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png" />
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/pple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png" />
     <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196" />
     <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32" />
@@ -88,7 +88,7 @@
                 <li>Use tiles from different tilesets</li>
                 <li>Draw on multiple layers</li>
                 <li>Undo / Redo</li>
-                <li>Smooth zooming in / out
+                <li>Smooth zooming in / out</li>
                 <li>Ambient light editor using real shaders</li>
                 <li>Shape drawing (lines, rectangles)</li>
                 <li>Entity list for viewing and updating properties of all map objects</li>
@@ -108,8 +108,7 @@
             </li>
             <li>Zoom in / out</li>
             <li>Change any animation properties from within the editor</li>
-        </ul>
-
+            </ul>
         </p>
         <hr />
         <p>
