update lime2d with release date

--- a/lime2d.html
+++ b/lime2d.html
@@ -72,6 +72,8 @@
             and everything else being rendered. This will make for extremely efficient 2D level creation.
             <br/><br/>
             The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
+            <br/><br/>
+            <strong>Release date: Friday, October 21, 2016!</strong>
         </p>
         <hr/>
         <p>
