update lime2d page

--- a/lime2d.html
+++ b/lime2d.html
@@ -68,8 +68,9 @@
             <br/>
             Lime2D is an open source in-game map/animation editor for 2D C++ game development projects.
             <br/><br/>
-            Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions,
-            and everything else being rendered. This will make for extremely efficient 2D level creation.
+            Since it is an in-game editor, you can edit maps in real-time with your player, collisions,
+            and everything else being rendered. You can then switch out of the editor and automatically see your
+            updated map / animations. This will make for extremely efficient 2D level creation.
             <br/><br/>
             The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
             <br/><br/>
@@ -92,7 +93,7 @@
                 <li>Undo / Redo</li>
                 <li>Smooth zooming in / out</li>
                 <li>Ambient light editor using real shaders</li>
-                <li>Shape drawing (lines, rectangles)</li>
+                <li>Shape drawing (lines, rectangles, points)</li>
                 <li>Entity list for viewing and updating properties of all map objects</li>
                 <li>More coming soon!</li>
             </ul>
