update lime2d with release

--- a/lime2d.html
+++ b/lime2d.html
@@ -73,8 +73,18 @@
             updated map / animations. This will make for extremely efficient 2D level creation.
             <br/><br/>
             The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
-            <br/><br/>
-            <strong>Release date: Friday, October 21, 2016!</strong>
+        </p>
+            <hr/>
+        <p>
+            <h3>Installation</h3>
+            I've created a video tutorial showing the process of getting Lime2D integrated with your game. There is also
+          a text version for those of you who don't want to follow an entire video.
+          <ul>
+              <li><a href="https://www.youtube.com/watch?v=iHNyOIGB0PE" target="_blank">Video</a></li>
+              <li><a href="http://www.limeoats.com/lime2d-setup-guide.html" target="_blank">Text version of the guide</a></li>
+          </ul>
+          If you have any trouble getting Lime2D installed / working or have any questions, please post below detailing exactly
+          what the issue is. I or somebody else will respond as soon as possible.
         </p>
         <hr/>
         <p>
