--- a/lime2d.html
+++ b/lime2d.html
@@ -72,7 +72,7 @@
             and everything else being rendered. You can then switch out of the editor and automatically see your
             updated map / animations. This will make for extremely efficient 2D level creation.
             <br/><br/>
-            The editor can be used in any C++ project using SFML on Windows and Mac OS X.
+            The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
         </p>
             <hr/>
         <p>
