update homepage information

--- a/index.html
+++ b/index.html
@@ -73,28 +73,10 @@
     <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bzFiOJkxv41y6SmHGxAwZMF" target="_blank"><h4>Remaking A Note For Lime in C++</h4></a>
-            <p>
-                I'm remaking my first game, <em>A Note For Lime</em>, in C++ using SFML, Lua, and Lime2D. I'll be recording the entire process
-                so you can watch and learn how to make a game.<br/>
-                <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bzFiOJkxv41y6SmHGxAwZMF" target="_blank">Click here</a> to watch the videos.
-            </p>
-        </div>
-        <div class="subsection">
-            <a href="lime2d.html"><h4>Lime2D</h4></a>
-            <p>
-                An open source in-game map/animation editor for 2D C++ SFML game development projects. It is designed to
-                be an easy library to set up and use in your game.
-                Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions, and
-                everything else being rendered.
-                This will make for extremely efficient 2D level creation.
-            </p>
-        </div>
-        <div class="subsection">
             <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
             <p>
                 I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
-                Euler</a> problems.<br/>
+                Euler</a> problems in C#.<br/>
                 <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
                 code.
             </p>
@@ -108,6 +90,16 @@
             <p>
                 For our one year anniversary, I made my girlfriend a game.<br/>
                 <a href="a-note-for-lime.html">Click here</a> to check it out.
+            </p>
+        </div>
+        <div class="subsection">
+            <a href="lime2d.html"><h4>Lime2D</h4></a>
+            <p>
+                An open source in-game map/animation editor for 2D C++ SFML game development projects. It is designed to
+                be an easy library to set up and use in your game.
+                Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions, and
+                everything else being rendered.
+                This will make for extremely efficient 2D level creation.
             </p>
         </div>
         <div class="subsection">
