update project euler section

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="http://github.com/limeoats/projecteuler" target="_blank"><h4>Project Euler</h4></a>
+            <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
             <p>
                 I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
-                Euler</a> problems in C#.<br/>
-                <a href="http://github.com/limeoats/projecteuler" target="_blank">Click here</a> to see some of my
+                Euler</a> problems in C++.<br/>
+                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
                 code.
             </p>
         </div>
