remove cavestory information, update projects

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
     <div>
         <h3>Current projects</h3>
         <div class="subsection">
+            <a href="lime2d.html"><h4>Lime2D</h4></a>
+            <p>
+                An open source in-game map/animation editor for 2D C++ SFML game development projects. 
+                You can use it to edit maps and animations in real-time with your player, physics, collisions, and
+                everything else being rendered. This makes for extremely efficient 2D level creation.
+            </p>
+        </div>
+        <div class="subsection">
             <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
             <p>
                 I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
@@ -93,30 +101,11 @@
             </p>
         </div>
         <div class="subsection">
-            <a href="lime2d.html"><h4>Lime2D</h4></a>
-            <p>
-                An open source in-game map/animation editor for 2D C++ SFML game development projects. It is designed to
-                be an easy library to set up and use in your game.
-                Since it is an in-game editor, you can edit maps in real-time with your player, physics, collisions, and
-                everything else being rendered.
-                This will make for extremely efficient 2D level creation.
-            </p>
-        </div>
-        <div class="subsection">
             <a href="http://bit.ly/1qIlgvt" target="_blank"><h4>BigNumber C++ Library</h4></a>
             <p>
                 BigNumber is a C++ class that allows for the creation and computation of arbitrary-length integers.<br/>
                 <a href="http://bit.ly/1qIlgvt" target="_blank">Click here</a> to view the source code and download the
                 library.
-            </p>
-        </div>
-        <div class="subsection">
-            <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank"><h4>
-                Remaking Cavestory in C++</h4></a>
-            <p>
-                Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br/>
-                <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank">Click
-                    here</a> to view the videos.
             </p>
         </div>
     </div>
