added a note for lime reimagined to homepage

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
     <div>
         <h3>Current projects</h3>
         <div class="subsection">
+            <a href="#"><h4>A Note For Lime: Reimagined</h4></a>
+            <p>
+                A few years ago, I made a <a href="a-note-for-lime.html" target="_blank">game</a> for my girlfriend on our first anniversary.<br/>
+                Now, we are getting married in a few months, and I'm making a new (and very improved) version of this game.
+                Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features being 
+                added.<br/>More information coming soon.</br>
+            </p>
+        </div>
+        <div class="subsection">
             <a href="lime2d.html"><h4>Lime2D</h4></a>
             <p>
                 An open source in-game map/animation editor for 2D C++ SFML game development projects. 
