--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="#"><h4>A Note For Lime: Reimagined</h4></a>
             <p>
                 A few years ago, I made a <a href="a-note-for-lime.html" target="_blank">game</a> for my girlfriend on our first anniversary.<br/>
-                Now, we are getting married in a few months, and I'm making a new (and very improved) version of this game.
+                Now, we're getting married in a few months, and I'm making a new (and very improved) version of this game.
                 Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features being 
                 added.<br/>More information coming soon.</br>
             </p>
