--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 <section class="main-content">
     <div>
         <h3>Welcome to Limeoats.com</h3>
-        <p>Hello! My name is Mark and I enjoy programming. I spend a great deal of my time
+        <p>
+            Hello! My name is Mark and I enjoy programming. I spend a great deal of my time
             doing all sorts of programming, including game development, web development, virtual reality,
-            and much more.</p>
+            and much more.
+        </p>
     </div>
     <hr/>
     <div>
