update limeoatsbot with points command. remove .idea folder from git

--- a/limeoatsbot.html
+++ b/limeoatsbot.html
@@ -81,6 +81,10 @@
                     <td>!commands</td>
                     <td>Show a list of commands that I respond to</td>
                 </tr>
+                <tr>
+                    <td>!points</td>
+                    <td>Display the number of points you have accumulated, as well as the amount of time you have spent in the stream</td>
+                </tr>
             </table>
         </div>
     </div>
