update projects, remove patreon

--- a/index.html
+++ b/index.html
@@ -81,25 +81,7 @@
                 Now, we're getting married in a few months, and I'm making a new (and very improved) version of this
                 game.
                 Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features
-                being
-                added.<br/>More information coming soon.</br>
-            </p>
-        </div>
-        <div class="subsection">
-            <a href="lime2d.html"><h4>Lime2D</h4></a>
-            <p>
-                An open source in-game map/animation editor for 2D C++ SFML game development projects.
-                You can use it to edit maps and animations in real-time with your player, physics, collisions, and
-                everything else being rendered. This makes for extremely efficient 2D level creation.
-            </p>
-        </div>
-        <div class="subsection">
-            <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
-            <p>
-                I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
-                Euler</a> problems in C++.<br/>
-                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
-                code.
+                being added.<br/>More information coming soon.</br>
             </p>
         </div>
     </div>
@@ -119,6 +101,23 @@
                 BigNumber is a C++ class that allows for the creation and computation of arbitrary-length integers.<br/>
                 <a href="http://bit.ly/1qIlgvt" target="_blank">Click here</a> to view the source code and download the
                 library.
+            </p>
+        </div>
+        <div class="subsection">
+            <a href="lime2d.html"><h4>Lime2D</h4></a>
+            <p>
+                An open source in-game map/animation editor for 2D C++ SFML game development projects.
+                You can use it to edit maps and animations in real-time with your player, physics, collisions, and
+                everything else being rendered. This makes for extremely efficient 2D level creation.
+            </p>
+        </div>
+        <div class="subsection">
+            <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
+            <p>
+                I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
+                Euler</a> problems in C++.<br/>
+                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
+                code.
             </p>
         </div>
     </div>
