update a note for lime reimagined description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>
                 A few years ago, I made a <a href="a-note-for-lime.html" target="_blank">game</a> for my girlfriend on
                 our first anniversary.<br/>
-                Now, we're getting married in a few months, and I'm making a new (and very improved) version of this
+                Now, we're getting married in a few weeks, and I'm making a new (and very improved) version of this
                 game.
                 Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features
                 being added.<br/>More information coming soon.</br>
