update projects and tagline

--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -64,6 +64,7 @@
       content="A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.">
 <section class="page-header">
     <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <h2 class="project-tagline">Mark Guerra</h2>
     <div class="project-icons"></div>
 </section>
 <section class="main-content">
