--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -59,6 +59,7 @@
 <meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
 <section class="page-header">
     <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <h2 class="project-tagline">Mark Guerra</h2>
     <div class="project-icons"></div>
 </section>
 <section class="main-content">
