--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 <meta itemprop="description" content="Hello! My name is Mark and I enjoy programming.">
 <section class="page-header">
     <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <h2 class="project-tagline">Mark Guerra</h2>
     <div class="project-icons"></div>
 </section>
 <section class="main-content">
     <div>
         <h3>Welcome to Limeoats.com</h3>
         <p>
-            Hello! My name is Mark and I enjoy programming. I spend a great deal of my time
+            Hello! My name is Mark and I enjoy programming. I spend a lot of my time
             doing all sorts of programming, including game development, web development, virtual reality,
             and much more.
         </p>
@@ -74,14 +75,12 @@
     <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="#"><h4>A Note For Lime: Reimagined</h4></a>
+            <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
             <p>
-                A few years ago, I made a <a href="a-note-for-lime.html" target="_blank">game</a> for my girlfriend on
-                our first anniversary.<br/>
-                Now, we're getting married in a few weeks, and I'm making a new (and very improved) version of this
-                game.
-                Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features
-                being added.<br/>More information coming soon.</br>
+                I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
+                Euler</a> problems in C++.<br/>
+                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
+                code.
             </p>
         </div>
     </div>
@@ -109,15 +108,6 @@
                 An open source in-game map/animation editor for 2D C++ SFML game development projects.
                 You can use it to edit maps and animations in real-time with your player, physics, collisions, and
                 everything else being rendered. This makes for extremely efficient 2D level creation.
-            </p>
-        </div>
-        <div class="subsection">
-            <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
-            <p>
-                I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
-                Euler</a> problems in C++.<br/>
-                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
-                code.
             </p>
         </div>
     </div>
