--- a/lime2d-setup-guide.html
+++ b/lime2d-setup-guide.html
@@ -59,6 +59,7 @@
 <meta itemprop="description" content="A guide for setting up Lime2D with your C++ project.">
 <section class="page-header">
     <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <h2 class="project-tagline">Mark Guerra</h2>
     <div class="project-icons"></div>
 </section>
 <section class="main-content">
