--- a/clion-and-cmake.html
+++ b/clion-and-cmake.html
@@ -62,6 +62,7 @@
 <meta itemprop="description" content="Learn how to create static libraries and link to them in CLion with CMake.">
 <section class="page-header">
     <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <h2 class="project-tagline">Mark Guerra</h2>
     <div class="project-icons"></div>
 </section>
 <section class="main-content">
